--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,18 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300&family=Poppins:ital,wght@0,500;1,200&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      *{
+        font-family: 'Open Sans', sans-serif;
+        font-family: 'Poppins', sans-serif;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
