--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300&family=Poppins:ital,wght@0,500;1,200&display=swap"
       rel="stylesheet"
     />
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,300&family=Permanent+Marker&family=Roboto+Slab:wght@100;200;300;400;600;700&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,700;1,900&display=swap" rel="stylesheet">
+
     <style>
       *{
         font-family: 'Open Sans', sans-serif;
