feat: cv link updated

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         font-family: 'Poppins', sans-serif;
       }
     </style>
-    <title>My Portfolio</title>
+    <title>Michado Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
